--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "react-scripts start",
     "dev": "nodemon -L index.js ",
     "devStart": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
