--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ services:
     ports:
       - '3000:3000'
     depends_on:
-      - backend
+      - server
 
-  backend:
+  server:
     build:
-      context: ./back
+      context: ./server
     ports:
       - '4000:4000'
     environment:
